admin/static/less/styles.less
// Copyright 2010-2012 RethinkDB, all rights reserved.
// CSS Reset
@import "bootstrap/reset.less";

// Core variables and mixins
@import "bootstrap/variables.less"; // Modify this for custom colors, font-sizes, etc
@import "bootstrap/mixins.less";

// Grid system and page structure
@import "bootstrap/scaffolding.less";
@import "bootstrap/grid.less";
@import "bootstrap/layouts.less";

// Components
@import "bootstrap/modals.less";
@import "bootstrap/tooltip.less";
@import "bootstrap/popovers.less";
@import "bootstrap/dropdowns.less";
@import "bootstrap/forms.less";
@import "bootstrap/navs.less";

// Utility classes
@import "bootstrap/utilities.less"; // Has to be last to override when necessary

@import "lesshat";

@accent: #0597d8;
@sans: 'Open Sans', sans-serif;
@serif: 'Copse', serif;
@monospace: 'Inconsolata', monospace;

// Visualizations (graphs, etc.)
@import "vis.less";

/* 
    ----------------------------------------------------------------------
    Sticky footer and 100% height
        - Uses Adham Dannaway's sticky footer approach (adhamdannaway.com)
    ----------------------------------------------------------------------
*/
html, body {
    height: 100%;
    background: #E5E5E5;
    // fix poor font rendering on OS X webkit
    -webkit-font-smoothing: antialiased;
}
#sticky-wrap { min-height: 100%; }
#main-container {
    padding-bottom: 95px;
}
#footer {
    position: relative;
    margin-top: -95px;
    height: 60px;
    clear: both;
    /* Used to preload the monospace fonts for the data explorer */
    .preload_fonts{
        font-family: @monospace;
    }
}
/* Opera fix */
body:before {
    content:"";
    height: 100%;
    float: left;
    width: 0;
    margin-top: -32767px;
}
.options_background{
    display: none;
    position: absolute;
    width: 100%;
    background: #fafafa;
    border-bottom: 1px solid #ccc;
    padding: 0px;
    height: 86px;
    border-bottom: 2px solid #ddd;
}
.options_container_arrow_overlay{
    display: none;
    position: absolute;
    z-index: 201;
    left: 50%;
    top: 51px;
    width: 0; 
    height: 0; 
    margin: 1px 0px 0px 185px;
    border-left: 10px solid transparent;
    border-right: 10px solid transparent; 
    border-bottom:10px solid #F6F0E3; 
}
.options_full_container{
    position: relative;
    margin: 0px auto;
    text-shadow: none;
    padding: 0px;
    .title{
        width: 100%;
        background: #F6F0E3;
        border-top: 1px solid #F0E6D1;
        border-bottom: 1px solid #F0E6D1;

        overflow: auto;
        .title_content {
            width: 940px;
            margin: 0px auto;
            color: #666;
            padding: 9px 0px 2px 0px;
            .title_text{
                font-family: @serif;
                font-weight: bold;
                font-size: 15px;
            }
            .version{
                float: right;
                margin: 0px 0px 7px 0px;
                font-family: @sans;
                font-size: 13px;
                -webkit-font-smoothing: antialiased;
                .layers{
                    float: left;
                    display: block;
                    margin: 3px 8px 0px 0px;
                    opacity: 0.7;
                }
            }
        }
    }
    .options_content{
        width: 940px;
        margin: 3px auto;
        padding: 8px 0px 0px 0px;
        overflow: auto;
        .toggle-primary{
            float: left;
            margin: 2px 0px 3px 0px;
            .switch{
                float: none;
            }
        }
        .description{
            margin: 5px 0px 0px 120px;
            font-family: @sans;
            font-size: 14px;
            color: #666;
        }
    }
}
/* ... */

